everything fixed but for some reason the paragraphs aren't aligned

--- a/maysFiles/about/about.css
+++ b/maysFiles/about/about.css
@@ -10,6 +10,12 @@ body {
 */
 
 
+body {
+	background-image: url('about.jpg');
+	background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
 
 h1 {
 	color: black;
@@ -19,12 +25,37 @@ h1 {
 	padding-top: 30px;
 }
 
-p {
+.left_side {
+	color: black;
+	font-size: 40px;
+	text-align: left;
+	font-family: "brandon-grotesque", Helvetica, sans-serif;
+    padding-left: 350px;
+    float: left;
+}
+/*
+.oneX {
+	color: black;
+	font-size: 40px;
+	text-align: left;
+	font-family: "brandon-grotesque", Helvetica, sans-serif;
+    padding-right: 230px;
+    padding-left: 230px;
+    padding-bottom: 20px;
+    width: 50%;
+    float:left;
+}*/
+
+
+.right_side {
 	color: black;
 	font-size: 20px;
 	text-align: left;
-	font-family: "Helvetica Neue", Helvetica, sans-serif;
-    padding-right: 350px;
-    padding-left: 350px;
+	font-family: "Courier New", Courier, monospace;
+    padding-right: 300px;
     padding-bottom: 20px;
+    float: right;
+    width: 30%;
+
 }
+
